--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="qrcode">
+  <style scoped>
+    .qrcode {
+      display: block;
+      width: 330px;
+      margin: auto;
+      margin-top: 30%;
+    }
+  </style>
+  <%= raw @qrcode.as_html %>
+</div>
