--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,5 +7,22 @@
       margin-top: 20%;
     }
   </style>
-  <%= raw @qrcode.as_html %>
+  <%= raw RQRCode::QRCode.new("https://login.weixin.qq.com/l/#{@uuid}", :size => 4, :level => :l).as_html %>
 </div>
+
+<script type="text/javascript">
+  App.bot_event = App.cable.subscriptions.create({channel: "BotEventChannel", bot_uuid: "<%= String(@uuid) %>"}, {
+    connected: function() {
+      console.log("BotEventChannel connected @ " + new Date());
+    },
+
+    disconnected: function() {
+      console.log("BotEventChannel disconnected @ " + new Date());
+    },
+
+    received: function(data) {
+      console.log(data);
+      window.location.href = "/messages/for/"+JSON.parse(data).wxuin;
+    }
+  });
+</script>
